# rent-a-boat

./: .gitignore  AGENTS.md  README.md  database.py  main.py  models.py  pyproject.toml  pytest.ini  test_main.py
.github/: copilot-instructions.md
.github/prompts/: plantuml.prompt.md  security-check.prompt.md
src/rentaboat/: __init__.py  main.py
src/rentaboat/routers/: boats.py
src/rentaboat/tests/: test_boats.py
